[gd_scene load_steps=17 format=3 uid="uid://c5gaoa8x4imrr"]

[ext_resource type="Script" uid="uid://b80gkgxtpudfh" path="res://Scripts/Agent/Chatbubble/chat_bubble_agent.gd" id="1_obd1a"]
[ext_resource type="Script" uid="uid://dbap0gqox0ty1" path="res://addons/markdownlabel/markdownlabel.gd" id="3_fu5oj"]
[ext_resource type="StyleBox" uid="uid://c1jn1xpubmsoc" path="res://themes/chat_bubble_agent.tres" id="3_obd1a"]
[ext_resource type="Script" uid="uid://dcx7crs23nf4" path="res://addons/markdownlabel/header_formats/h1_format.gd" id="4_0nhq0"]
[ext_resource type="Script" uid="uid://d0sin64i4v3op" path="res://addons/markdownlabel/header_formats/h2_format.gd" id="5_do120"]
[ext_resource type="Script" uid="uid://dlok0dv1tq2bf" path="res://addons/markdownlabel/header_formats/h3_format.gd" id="6_72mt0"]
[ext_resource type="Script" uid="uid://bayuh2vafablg" path="res://addons/markdownlabel/header_formats/h4_format.gd" id="7_lprre"]
[ext_resource type="Script" uid="uid://dfr1w7u3jgni3" path="res://addons/markdownlabel/header_formats/h5_format.gd" id="8_nwurc"]
[ext_resource type="Script" uid="uid://bsi6dexoofpe6" path="res://addons/markdownlabel/header_formats/h6_format.gd" id="9_s5wdy"]
[ext_resource type="Texture2D" uid="uid://fao5ow26yhly" path="res://icon.svg" id="10_41kqy"]

[sub_resource type="Resource" id="Resource_wsrgt"]
resource_local_to_scene = true
script = ExtResource("4_0nhq0")
font_size = 2.285
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_ciqh8"]
resource_local_to_scene = true
script = ExtResource("5_do120")
font_size = 1.714
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_26aer"]
resource_local_to_scene = true
script = ExtResource("6_72mt0")
font_size = 1.428
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_10rc0"]
resource_local_to_scene = true
script = ExtResource("7_lprre")
font_size = 1.142
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_0a38m"]
resource_local_to_scene = true
script = ExtResource("8_nwurc")
font_size = 1.0
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_xa32n"]
resource_local_to_scene = true
script = ExtResource("9_s5wdy")
font_size = 0.857
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[node name="ChatBubbleAgent" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
script = ExtResource("1_obd1a")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2

[node name="AgentName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 30

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("10_41kqy")
expand_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_obd1a")

[node name="MarkdownContent" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
bbcode_enabled = true
fit_content = true
selection_enabled = true
script = ExtResource("3_fu5oj")
automatic_links = false
h1 = SubResource("Resource_wsrgt")
h2 = SubResource("Resource_ciqh8")
h3 = SubResource("Resource_26aer")
h4 = SubResource("Resource_10rc0")
h5 = SubResource("Resource_0a38m")
h6 = SubResource("Resource_xa32n")
metadata/_custom_type_script = "uid://dbap0gqox0ty1"

[connection signal="finished" from="VBoxContainer/HBoxContainer/PanelContainer/MarkdownContent" to="." method="_on_markdown_content_finished"]
